feat: встроен движок ProseMirror в WebView и протестирован на тестовом контроллере; добавлен класс Editor для взаимодействия с движком.